--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Campgrounds</title>
+    <title>Show Campground</title>
 </head>
 
 <body>
-    <h1>All Campgrounds</h1>
+    <h1><%= campground.title %></h1>
     <ul>
-        <% for( let campground of campgrounds) { %>
-        <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %>, <%= campground.location %></a></li>
-        <% } %>
+        ID: <%= campground._id %>
+    </ul>
+    <ul>
+        Location: <%= campground.location %>
     </ul>
 </body>
 
