add a post route for submitting new campgrounds
also adds return links across the views that already exist
these will be refactored into partials later on, but right now
i just want to work

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,6 +16,9 @@
     <ul>
         Location: <%= campground.location %>
     </ul>
+    <footer>
+        <a href="/campgrounds">Return to All Campgrounds</a>
+    </footer>
 </body>
 
 </html>
