add editing for campgrounds, through a put route
imported method-override to fake the put request

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,6 +17,8 @@
         Location: <%= campground.location %>
     </ul>
     <footer>
+        <a href="/campgrounds/<%= campground._id %>/edit">Edit This Campground</a>
+        <div></div>
         <a href="/campgrounds">Return to All Campgrounds</a>
     </footer>
 </body>
