add campground delete route, and buttons for this on each camp
includes a delete success page, to verify that the entry was
removed, so i dont have to guess each time

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,9 +17,15 @@
         Location: <%= campground.location %>
     </ul>
     <footer>
-        <a href="/campgrounds/<%= campground._id %>/edit">Edit This Campground</a>
-        <div></div>
-        <a href="/campgrounds">Return to All Campgrounds</a>
+        <p>
+            <a href="/campgrounds/<%= campground._id %>/edit">Edit This Campground</a>
+        </p>
+        <p>
+            <a href="/campgrounds">Return to All Campgrounds</a>
+        </p>
+        <p>
+            <a href="/campgrounds/<%= campground._id %>/delete">Delete This Campground</a>
+        </p>
     </footer>
 </body>
 
