--- a/views/campgrounds/delete.ejs
+++ b/views/campgrounds/delete.ejs
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("layouts/boilerplate") %>
+<h1>Deleting <%= campground.title %>...?</h1>
+ID: <%= campground._id %>
+<p>
+    Are you sure you wish to delete this campground?
+</p>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete <%= campground.title %>?</title>
-</head>
+<p>
+<form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+    <button>Yep! Delete it.</button>
+</form>
+</p>
 
-<body>
-    <h1>Deleting <%= campground.title %>...?</h1>
-    ID: <%= campground._id %>
-    <p>
-        Are you sure you wish to delete this campground?
-    </p>
-
-    <p>
-    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-        <button>Yep! Delete it.</button>
-    </form>
-    </p>
-
-    <p>
-        <a href="/campgrounds/<%= campground._id %>">No, return to campground</a>
-    </p>
-</body>
-
-</html>
+<p>
+    <a href="/campgrounds/<%= campground._id %>">No, return to campground</a>
+</p>
