update db model to support image string
this allows a random image to be displayed from unsplash on each
requested campground

also cleaned up the layouts slightly

--- a/views/campgrounds/delete.ejs
+++ b/views/campgrounds/delete.ejs
@@ -1,5 +1,5 @@
 <% layout("layouts/boilerplate") %>
-<h1>Deleting <%= campground.title %>...?</h1>
+<h1>Deleting <%= campground.title %>, <%= campground.location %>...?</h1>
 ID: <%= campground._id %>
 <p>
     Are you sure you wish to delete this campground?
