--- a/views/campgrounds/deletesuccess.ejs
+++ b/views/campgrounds/deletesuccess.ejs
@@ -1,5 +1,5 @@
 <% layout("layouts/boilerplate") %>
-Campground <%= campground.title %>, with ID of <%= campground._id %>deleted.
+Campground "<%= campground.title %>, <%= campground.location %>" with ID of <%= campground._id %> deleted!
 
 <p>
     <a href="/campgrounds">Return to all campgrounds</a>
