--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,8 +3,25 @@
 <div>
     <a href="/campgrounds/new">Add New Campground</a>
 </div>
-<ul>
-    <% for( let campground of campgrounds) { %>
-    <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %>, <%= campground.location %></a></li>
-    <% } %>
-</ul>
+<% for( let campground of campgrounds) { %>
+<div class="card">
+    <div class="row" style="height: 180px">
+        <div class="col-md-4">
+            <img class="mw-100 mh-auto p-3" src="<%= campground.image %>" alt="">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">
+                    <%= campground.title %>, <%= campground.location %>
+                </h5>
+                <p class="card-text">
+                    <%= campground.description %>
+                </p>
+                <p class="card-text">
+                    <a href="/campgrounds/<%= campground._id %>">View Campground</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<% } %>
