--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -6,7 +6,7 @@
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %>, <%= campground.location %></h5>
                 <p class="card-text"><%= campground.description %></p>
-                <p class="card-text">Price: <%= campground.price %></p>
+                <p class="card-text">Price: £<%= campground.price %>/night</p>
             </div>
             <ul class="list-group"></ul>
             <div class="card-body">
