--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,5 +14,16 @@
                 <a class="btn btn-danger    " href="/campgrounds/<%= campground._id %>/delete">Delete</a>
             </div>
         </div>
+        <form action="" class="mb-3">
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div>
+            <div class="mb-3">
+                <label for="body" class="form-label">Review</label>
+                <textarea class="form-control" id="body" rows="3"></textarea>
+            </div>
+            <button class="btn btn-success">Submit Review</button>
+        </form>
     </div>
 </div>
