--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,14 +14,16 @@
                 <a class="btn btn-danger    " href="/campgrounds/<%= campground._id %>/delete">Delete</a>
             </div>
         </div>
-        <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3">
+        <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
             <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
                 <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
             </div>
             <div class="mb-3">
                 <label for="body" class="form-label">Review</label>
-                <textarea class="form-control" name="review[body]" id="body" rows="3"></textarea>
+                <textarea class="form-control" name="review[body]" id="body" rows="3" required></textarea>
+                <div class="invalid-feedback">Review cannot be empty.</div>
+                <div class="valid-feedback">Looks okay!</div>
             </div>
             <button class="btn btn-success">Submit Review</button>
         </form>
