--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,5 +27,13 @@
             </div>
             <button class="btn btn-success">Submit Review</button>
         </form>
+        <% for( let i = 0; i < campground.reviews.length; i++ ) { %>
+        <div class="mb-3">
+            <p>
+                Score: <%=campground.reviews[i].rating%>,
+                Review: <%=campground.reviews[i].body%>
+            </p>
+        </div>
+        <% } %>
     </div>
 </div>
