--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,6 +7,7 @@
             <hr>
             <p><%= err.status %>: <%= err.message%></p>
             <hr>
+            <p><%= err.stack %></p>
             <!--<p><%= err.stack %></p>-->
         </div>
     </div>
