--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,8 +11,12 @@
             <ul class="list-group"></ul>
             <div class="card-body">
                 <p class="card-text">Submitted by: <%= campground.author.username %></p>
-                <a class="btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                <a class="btn btn-danger    " href="/campgrounds/<%= campground._id %>/delete">Delete</a>
+                <% if (currentUser && campground.author.equals(currentUser._id)) { %>
+                <div>
+                    <a class="btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                    <a class="btn btn-danger    " href="/campgrounds/<%= campground._id %>/delete">Delete</a>
+                </div>
+                <% } %>
             </div>
         </div>
     </div>
