--- a/public/stylesheets/stars.css
+++ b/public/stylesheets/stars.css
@@ -160,7 +160,7 @@
 
 .starability-checkmark > label {
     position: relative;
-    display: inline-block;
+    float: left;
     width: 30px;
     height: 30px;
     font-size: 0.1em;
