--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" class="needs-validation" novalidate>
+        <form action="/campgrounds" method="POST" class="needs-validation" enctype="multipart/form-data" novalidate>
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" id="title" name="campground[title]" class="form-control" required>
@@ -13,7 +13,8 @@
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Image URL</label>
-                <input type="text" id="image" name="campground[image]" class="form-control" required>
+                <input type="file" class="form-control" id="image" name="campground[image]">
+                <!-- <input type="text" id="image" name="campground[image]" class="form-control" required> -->
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Price</label>
