--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,7 +13,8 @@
             </div>
             <div class="mb-3">
                 <label for="image" class="form-label">Image URL</label>
-                <input type="file" class="form-control" id="image" name="campground[image]">
+                <input type="file" class="form-control" id="image" name="campground[image]" multiple>
+                <div class="form-text">Allowed filetypes: jpeg, jpg, png</div>
                 <!-- <input type="text" id="image" name="campground[image]" class="form-control" required> -->
             </div>
             <div class="mb-3">
