--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,12 +1,39 @@
 <% layout("layouts/boilerplate") %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
+<link rel="stylesheet" href="/stylesheets/carouselheight.css">
 
 <div class="row">
     <div class="col-6">
         <div class="card mb-4">
-            <% for (let img of campground.images) {%>
-            <img src="<%= img.url %>" class="card-img-top" alt="...">
-            <% } %>
+            <div id="campgroundCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <% for (let i = 0; i < campground.images.length; i++) {%>
+                    <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+                        <img src="<%= campground.images[i].url %>" class="d-block w-100" alt="">
+                    </div>
+                    <% } %>
+                </div>
+                <% if (campground.images.length > 1) {%>
+                <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <% } %>
+            </div>
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %>, <%= campground.location %></h5>
                 <p class="card-text"><%= campground.description %></p>
