--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -12,7 +12,7 @@
                 <input type="text" id="location" name="campground[location]" class="form-control" required>
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label">Image URL</label>
+                <label for="image" class="form-label">Upload Image</label>
                 <input type="file" class="form-control" id="image" name="campground[image]" multiple>
                 <div class="form-text">Allowed filetypes: jpeg, jpg, png</div>
                 <!-- <input type="text" id="image" name="campground[image]" class="form-control" required> -->
