--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,7 @@
 <div class="card">
     <div class="row" style="height: 180px">
         <div class="col-md-4">
-            <img class="mw-100 mh-auto p-3" src="<% if (campground.images.length > 0) {%><%=campground.images[0].url%><%}%>"
+            <img class="mw-100 mh-auto p-3" src="<% if (campground.images.length > 0) {%><%=campground.images[0].thumbnail%><%}%>"
                 alt="">
         </div>
         <div class="col-md-8">
