--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,9 +1,11 @@
 <% layout("layouts/boilerplate") %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <link rel="stylesheet" href="/stylesheets/carouselheight.css">
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' />
 
 <div class="row">
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
         <div class="card mb-4">
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
@@ -51,6 +53,7 @@
             </div>
         </div>
     </div>
+
     <div class="col-6">
         <% if (currentUser) { %>
         <h2 class="mb-4">Leave a Review</h2>
@@ -111,3 +114,11 @@
         <% } %>
     </div>
 </div>
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+
+<script>
+    const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+    const campground = <%-JSON.stringify(campground)%>;
+</script>
+
+<script src="/js/campMap.js"></script>
