--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;'></div>
+        <div id="map" style="width: 100%; height: 300px" class="mb-2"></div>
         <div class="card mb-4">
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
