--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout("layouts/boilerplate") %>
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css'/>
 <div id="map" style="width: 100%; height: 500px">
 </div>
 <h1>All Campgrounds</h1>
@@ -24,3 +25,11 @@
     </div>
 </div>
 <% } %>
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+
+<script>
+    const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+</script>
+
+<script src="/js/clusterMap.js"></script>
