fix carousel not rendering correct buttons for more than 3 images

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,8 +31,12 @@
                         aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+                        <% if (campground.images.length > 2) {%>
+                            <% for( let i = 2; i < campground.images.length; i++ ) { %>
+                                <button type="button" data-bs-target="#campgroundCarousel" data-bs-slide-to="<%=i%>"
+                                aria-label="Slide <%=i%>"></button>
+                            <% } %>
+                        <% } %>
                 </div>
                 <% } %>
             </div>
