--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css'/>
 <div id="map" style="width: 100%; height: 600px">
 </div>
-<h1>All Campgrounds</h1>
+<h1 class="my-4 text-center">Full Campgrounds Index</h1>
 <% for( let campground of campgrounds) { %>
 <div class="card">
     <div class="row" style="height: 180px">
