add fancy homepage styling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,8 +28,8 @@
         <main class="px-3">
             <h1>YelpCamp</h1>
             <p class="lead">Welcome to YelpCamp!<br>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi voluptates pariatur est, blanditiis cupiditate magnam assumenda earum vero aspernatur error exercitationem minus ut aliquam et dolore, debitis laudantium praesentium architecto?</p>
-            <a href="/campgrounds" class="btn btn-large btn-secondary fw-bold text-white bg-white">View Campgrounds</a>
+            Jump right in and explore our many campgrounds.<br>Feel free to share some of your own, and comment on others!</p>
+            <a href="/campgrounds" class="btn btn-large btn-secondary fw-bold border-white bg-white focus-ring focus-ring-warning">View Campgrounds</a>
         </main>
         <footer class="mt-auto text-white-50">
             <span>© YelpCamp By Boff, 2023</span>
