--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,22 +4,20 @@
 </div>
 <h1 class="my-4 text-center">Full Campgrounds Index</h1>
 <% for( let campground of campgrounds) { %>
-<div class="card">
-    <div class="row" style="height: 180px">
-        <div class="col-md-4">
-            <img class="mw-100 mh-auto p-3" src="<% if (campground.images.length > 0) {%><%=campground.images[0].thumbnail%><%}%>" alt="">
+<div class="card mb-3">
+    <div class="row">
+        <div class="col-md-3">
+            <img class="card-img p-3 object-fit-contain" src="<% if (campground.images.length > 0) {%><%=campground.images[0].thumbnail%><%}%>" alt=""">
         </div>
-        <div class="col-md-8">
-            <div class="card-body">
+        <div class="col-md-9">
+            <div class="card-body d-flex flex-column h-100 justify-content-between">
                 <h5 class="card-title">
                     <%=campground.title%>, <%=campground.location%>
                 </h5>
                 <p class="card-text">
                     <%=campground.description%>
                 </p>
-                <p class="card-text">
-                    <a href="/campgrounds/<%= campground._id %>">View Campground</a>
-                </p>
+                <a class="align-self-start btn btn-primary" href="/campgrounds/<%= campground._id %>">View Campground</a>
             </div>
         </div>
     </div>
