--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,7 @@
 <% layout("layouts/boilerplate") %>
 <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css'/>
-<div id="map" style="width: 100%; height: 600px">
+<link rel='stylesheet' href='/stylesheets/maps.css'/>
+<div id="clustermap">
 </div>
 <h1 class="my-4 text-center">Full Campgrounds Index</h1>
 <% for( let campground of campgrounds) { %>
