--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,7 @@
 <% layout("layouts/boilerplate") %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <link rel="stylesheet" href="/stylesheets/carouselheight.css">
+<link rel='stylesheet' href='/stylesheets/maps.css'/>
 <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css'/>
 
 <div class="row">
@@ -58,7 +59,7 @@
     </div>
 
     <div class="col-6">
-        <div id="map" style="width: 100%; height: 300px" class="mb-2"></div>
+        <div id="map" class="mb-2"></div>
         <% if (currentUser) { %>
         <h2 class="mb-4">Leave a Review</h2>
         <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
