--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,16 +7,20 @@
 <% for( let campground of campgrounds) { %>
 <div class="card mb-3">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-xl-2">
             <img class="card-img p-3 object-fit-contain" src="<% if (campground.images.length > 0) {%><%=campground.images[0].thumbnail%><%}%>" alt=""">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 col-xl-10">
             <div class="card-body d-flex flex-column h-100 justify-content-between">
                 <h5 class="card-title">
                     <%=campground.title%>, <%=campground.location%>
                 </h5>
                 <p class="card-text">
+                    <% if (campground.description.length > 190) { %>
+                    <%=campground.description.substring(0,190)+"..."%>
+                    <% } else { %>
                     <%=campground.description%>
+                    <% }%>
                 </p>
                 <a class="align-self-start btn btn-primary" href="/campgrounds/<%= campground._id %>">View Campground</a>
             </div>
