--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,12 +3,16 @@
     <div class="col-6 offset-3">
         <div class="alert alert-danger">
             <h1 class="alert-heading">&#58;&#40; </h1>
-            <p>Oh No! Error</p>
+            <p>Oh No! Error, with code: <%= err.status %></p>
+            <% if (process.env.NODE_ENV !== "production") { %>
             <hr>
             <p><%= err.status %>: <%= err.message%></p>
             <hr>
             <p><%= err.stack %></p>
-            <!--<p><%= err.stack %></p>-->
+            <% } else { %>
+            <hr>
+            <p>If you're unsure, speak to an admin about this error.</p>
+            <% } %>
         </div>
     </div>
 </div>
