--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -15,7 +15,7 @@
                     <div class="mb-3">
                         <label for="email" class="form-label">Email (any fake email will do, it's just a demo)</label>
                         <input type="email" id="email" name="email" class="form-control" required>
-                        <div class="invalid-feedback">Email should be example@example.com (Just give a fake one, this website is only a demo! 🙂)</div>
+                        <div class="invalid-feedback">Email should be like "example@example.com" (Just give a fake one, this website is only a demo! 🙂)</div>
                         <div class="valid-feedback">
                             Looks okay!
                         </div>
